--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-share": "^5.0.3",
     "tailwindcss": "3.4.0",
     "typescript": "5.3.3"
   }
